Add output validation enhancements and agent profile updates
- Introduced a new `agent-output-validation.md` documentation file detailing the output validation pipeline and extension points for agent-specific validation strategies.
- Updated the `OutputValidationStrategy` interface to include a `supports` method for agent-specific validation logic and a default `order` method for strategy execution order.
- Modified `OutputValidationStrategyRequest` to use `AgentProfile` directly, enhancing the request structure for validation strategies.
- Refactored `FinalOutputValidationService` to utilize the new strategy request structure and improved validation flow.
- Enhanced `OutputContract` to include a `rawJson` field for better contract representation.
- Updated various components to remove legacy output validation strategy references, streamlining the validation process.
- Added new `AgentRuntimeProperties` for logging model I/O, improving observability during agent interactions.
- Implemented a new `Hsk5V1LessonStrategy` for lesson validation, ensuring compliance with specific content requirements.
- Enhanced lesson generation services to support new vocabulary tracking and review features, integrating with existing lesson management systems.